--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,25 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+@media (prefers-color-scheme: dark) {
+  :root {
+    --hover-border-color: rgba(255, 0, 112, 0.4);
+    --title-color: #db00ff;
+    --regular-text-color: #f1b2ce;
+    --accent-color: #ff0070;
+    --h3-background-color: #ff0070;
+    --h3-color: #000028;
+    --background-color: #000028;
+    --background-image: url(../images/cover-image-dark.png);
+    --rec-decor-visibility: visible;
+  }
+}
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --hover-border-color: rgba(255, 0, 112, 0.4);
+  --title-color: #db00ff;
+  --regular-text-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --h3-background-color: #ff0070;
+  --h3-color: #000028;
+  --background-color: #000028;
+  --background-image: url(../images/cover-image-dark.png);
+  --rec-decor-visibility: visible;
 }
