--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,27 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+@media (prefers-color-scheme: light) {
+  :root {
+    --hover-border-color: rgba(50, 49, 45, 0.4);
+    --title-color: #ffc2e6;
+    --regular-text-color: #353430;
+    --accent-color: #353430;
+    --h3-background-color: #ff8dcb;
+    --h3-color: #353430;
+    --background-color: #fff1f7;
+    --background-image: url(../images/cover-image-light.png);
+    --rec-decor-visibility: hidden;
+  }
+}
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  .page.theme_light {
+    --hover-border-color: rgba(50, 49, 45, 0.4);
+    --title-color: #ffc2e6;
+    --regular-text-color: #353430;
+    --accent-color: #353430;
+    --h3-background-color: #ff8dcb;
+    --h3-color: #353430;
+    --background-color: #fff1f7;
+    --background-image: url(../images/cover-image-light.png);
+    --rec-decor-visibility: hidden;
+  }
 }
