--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,16 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --text-family: "IBM Plex Mono";
+  --text-size: 18px;
+  --text-inline: 23.4px;
+  --title-color: #db00ff;
+  --title-shadow: #ff0070;
+  --regular-text-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --h3-background-color: #ff0070;
+  --h3-color: #000028;
+  --background-color: #000028;
+  --background-image: url(../images/cover-image-dark.png);
+}
