--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,10 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   font-size: var(--text-size);
-  font-family: var(--text-family);  
+  font-family: var(--text-family);
   background-color: var(--background-color);
   line-height: var(--text-inline);
+  background-attachment: fixed;
 }
 
 .header {
@@ -351,7 +352,7 @@ img {
     max-width: none;
     min-width: auto;
   }
-  
+
   .pictures {
     display: flex;
     flex-direction: column;
