--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,9 +11,9 @@
   --title-shadow: #ff0070;
   --regular-text-color: #f1b2ce;
   --accent-color: #ff0070;
-  --h3-background-color: #ff0070;
-  --h3-color: #000028;
+  --accent-hover-color: #ff007066;
+  --subtitle-background-color: #ff0070;
+  --subtitle-color: #000028;
   --background-color: #000028;
   --background-image: url(../images/cover-image-dark.png);
-
 }
